[metadata]
name = ga-opencv-python
version = 0.0.1
author = Justin Okamoto
author_email = jdokamoto@gmail.com
description = Personal project to start implementing OpenCV for GPU.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/justinokamoto/ga-opencv-python
project_urls =
    Bug Tracker = https://github.com/justinokamoto/ga-opencv-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
# TODO: Auto-detect CUDA version! Don't use pre-build.
# TODO: Pin version
install_requires =
    numpy >=1.18.0
    cupy-cuda102=10.0.0

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests